# profile.wearable.platform.core.uifw.efl-modules

./: AUTHORS  COPYING
datetime_input_circle/: Makefile.am  configure.ac  datetime_input_circle.c
datetime_input_spinner/: Makefile.am  autogen.sh  datetime_input_spinner.c
packaging/: elm-modules.spec
